# pg_benchmark

./: .env  INTEGRATION_GUIDE.md  README (2).md  README.md  benchmark.py  build_cython.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  results.py  seed.py  strategies.py
pg_fast/: __init__.py
src/pg_benchmark/: __init__.py  config.py  runner.py  seed.py
src/pg_benchmark/benchmarks/: __init__.py  asyncpg_bench.py  base.py  connectorx_bench.py  copy_csv.py  cython_bridge_bench.py  psycopg2_cursor.py  psycopg3_binary.py  sqlalchemy_naive.py
src/pg_benchmark/cython_bridge/: __init__.py  bridge.c  bridge.cp311-win_amd64.pyd  bridge.html  bridge.pyx
src/pg_benchmark/reporting/: __init__.py  chart.py  csv_export.py  table.py
